tests/purs/warning/UnusedExplicitImport.out
Error found:
in module [33mMain[0m
at tests/purs/warning/UnusedExplicitImport.purs:4:1 - 4:40 (line 4, column 1 - line 4, column 40)

  The import of module [33mPrelude[0m contains the following unused references:

    [33mbind[0m

  It could be replaced with:

    [33mimport Prelude (Unit, pure, unit)[0m



See https://github.com/purescript/documentation/blob/master/errors/UnusedExplicitImport.md for more information,
or to contribute content related to this error.

